provide SSE_FLAGS and WITH_SSE_FLAGS automake conditional.
Wed Apr 12 02:29:11 2006  Tim Janik  <timj@gtk.org>

        * configure.in: provide SSE_FLAGS and WITH_SSE_FLAGS automake conditional.

        * acbeast.m4: added MC_PROG_CC_SPECIAL_FLAGS() to help constructing SSE_FLAGS.

svn path=/trunk/; revision=3595

--- a/configure.in
+++ b/configure.in
@@ -332,7 +332,12 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     ])
     AC_SUBST(SFI_HAVE_MUTEXATTR_SETTYPE)
 
-    dnl # --- setup BSE search/install paths ---
+    # --- setup BSE SIMD flags ---
+    MC_PROG_CC_SPECIAL_FLAGS(SSE_FLAGS, -mmmx -msse -mfpmath=sse -ftree-vectorize)
+    AC_SUBST(SSE_FLAGS)
+    AM_CONDITIONAL(WITH_SSE_FLAGS, [echo " $SSE_FLAGS" | grep 'mmx.*sse' -q])
+
+    # --- setup BSE search/install paths ---
     bseplugindir=\${libdir}/bse/v$BIN_VERSION/plugins
     AC_SUBST(bseplugindir)
     bsedriverdir=\${libdir}/bse/v$BIN_VERSION/drivers
