--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -6,7 +6,7 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS =
 
-INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
+INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(top_srcdir)/beast-gtk -I$(top_builddir)/beast-gtk -I$(srcdir) $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
 
 DEFS += $(strip \
 	-DGTK_DISABLE_COMPAT_H 	\
@@ -43,54 +43,69 @@ gxk_extra_sources = $(strip \
 	gxkrackcovers.c		\
 	gxkmarshal.list		\
 )
-gxk_built_sources = $(strip \
-	gxkmarshal.h	gxkmarshal.c	gxkgentypes.h	gxkgentypes.c \
-)
+
+EXTRA_DIST += $(gxk_headers) $(gxk_extra_sources)
 
 GLIB_MKENUMS = glib-mkenums
-temp_files = xgen-gmh xgen-gmc xgen-ggth xgen-ggtc
-stamp_files = gxkgentypes.stamp
 
-$(gxk_c_sources): $(gxk_built_sources)
-
-$(srcdir)/gxkmarshal.h:	gxkmarshal.list
-	cd $(srcdir) \
-	&& glib-genmarshal --prefix=gxk_marshal gxkmarshal.list --header >> xgen-gmh \
-	&& cp xgen-gmh gxkmarshal.h \
-	&& rm -f xgen-gmh
-$(srcdir)/gxkmarshal.c: gxkmarshal.list
-	cd $(srcdir) \
-	&& glib-genmarshal --prefix=gxk_marshal gxkmarshal.list --body >> xgen-gmc \
-	&& cp xgen-gmc gxkmarshal.c \
-	&& rm -f xgen-gmc
-$(srcdir)/gxkgentypes.h: gxkgentypes.stamp ;
-$(srcdir)/gxkgentypes.stamp: gxkgentypes.c
-	cd $(srcdir) \
-	&& $(GLIB_MKENUMS) \
-	  --fprod "\n/* --- @filename@ --- */" \
-	  --eprod "#define GXK_TYPE_@ENUMSHORT@\t    (gxk__type_id__@EnumName@)\n" \
-	  --eprod "extern GType gxk__type_id__@EnumName@;" \
-	    $(gxk_headers) > xgen-ggth \
-	&& (cmp -s xgen-ggth gxkgentypes.h || cp xgen-ggth gxkgentypes.h) \
-	&& rm -f xgen-ggth \
+# gxkgentypes.h
+GENERATED_EXTRA_DIST += gxkgentypes.h
+$(libgxk_a_OBJECTS): gxkgentypes.h
+gxkgentypes.h: @PERLRULE@ stamp-gxkgentypes.h ;
+stamp-gxkgentypes.h: @PERLRULE@ $(gxk_headers)
+	( \
+	  cd $(srcdir) \
+	  && $(GLIB_MKENUMS) \
+	    --fprod "\n/* --- @filename@ --- */" \
+	    --eprod "#define GXK_TYPE_@ENUMSHORT@\t    (gxk__type_id__@EnumName@)\n" \
+	    --eprod "extern GType gxk__type_id__@EnumName@;" \
+	      $(gxk_headers) \
+	) > xgen-$(@F) \
+	&& (cmp -s xgen-$(@F) $(srcdir)/gxkgentypes.h || cp xgen-$(@F) $(srcdir)/gxkgentypes.h) \
+	&& rm -f xgen-$(@F) \
 	&& echo timestamp > $(@F)
-$(srcdir)/gxkgentypes.c: $(gxk_headers)
-	cd $(srcdir) \
-	&& $(GLIB_MKENUMS) \
-	  --fprod "\n/* --- @filename@ --- */\n#include\t\"@filename@\"" \
-	  --vhead "\nGType gxk__type_id__@EnumName@ = 0;" \
-	  --vhead "\nstatic G@Type@Value @enum_name@_values[] = {" \
-	  --vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
-	  --vtail "  { 0, NULL, NULL }\n};\n" \
-	    $(gxk_headers) > xgen-ggtc \
-	&& $(GLIB_MKENUMS) \
-	  --fhead "static const GxkTypeGenerated generated_type_entries[] = {" \
-	  --fprod "\n/* --- @filename@ --- */" \
-	  --eprod "  { \"@EnumName@\", G_TYPE_@TYPE@, &gxk__type_id__@EnumName@, @enum_name@_values }," \
-	  --ftail "\n};" \
-	    $(gxk_headers) >> xgen-ggtc \
-        && cp xgen-ggtc $@ \
-	&& rm -f xgen-ggtc
+# gxkgentypes.c
+GENERATED_CLEANFILES += gxkgentypes.c
+$(libgxk_a_OBJECTS): gxkgentypes.c
+gxkgentypes.c: $(gxk_headers)
+	( \
+	  cd $(srcdir) \
+	  && $(GLIB_MKENUMS) \
+	    --fprod "\n/* --- @filename@ --- */\n#include\t\"@filename@\"" \
+	    --vhead "\nGType gxk__type_id__@EnumName@ = 0;" \
+	    --vhead "\nstatic G@Type@Value @enum_name@_values[] = {" \
+	    --vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
+	    --vtail "  { 0, NULL, NULL }\n};\n" \
+	      $(gxk_headers) \
+	  && $(GLIB_MKENUMS) \
+	    --fhead "static const GxkTypeGenerated generated_type_entries[] = {" \
+	    --fprod "\n/* --- @filename@ --- */" \
+	    --eprod "  { \"@EnumName@\", G_TYPE_@TYPE@, &gxk__type_id__@EnumName@, @enum_name@_values }," \
+	    --ftail "\n};" \
+	      $(gxk_headers) \
+	) > xgen-$(@F) \
+        && cp xgen-$(@F) $@ \
+	&& rm -f xgen-$(@F)
+# gxkmarshal.h
+GENERATED_CLEANFILES += gxkmarshal.h
+$(libgxk_a_OBJECTS): gxkmarshal.h
+gxkmarshal.h: gxkmarshal.list
+	( \
+	  cd $(srcdir) \
+	  && glib-genmarshal --prefix=gxk_marshal gxkmarshal.list --header \
+	) > xgen-$(@F) \
+	&& cp xgen-$(@F) $@ \
+	&& rm -f xgen-$(@F)
+# gxkmarshal.c
+GENERATED_CLEANFILES += gxkmarshal.c
+$(libgxk_a_OBJECTS): gxkmarshal.c
+gxkmarshal.c: gxkmarshal.list
+	( \
+	  cd $(srcdir) \
+	  && glib-genmarshal --prefix=gxk_marshal gxkmarshal.list --body \
+	) > xgen-$(@F) \
+	&& cp xgen-$(@F) $@ \
+	&& rm -f xgen-$(@F)
 
 libgxk_a_SOURCES = $(gxk_c_sources)
 
@@ -106,6 +121,11 @@ gxktest_LDADD = $(progs_LDADD)
 splinetest_SOURCES = splinetest.c dummy.cc
 splinetest_LDADD = $(progs_LDADD)
 
-EXTRA_DIST += $(gxk_headers) $(gxk_extra_sources) $(gxk_built_sources)
-MAINTAINERCLEANFILES += $(gxk_built_sources) $(stamp_files)
-CLEANFILES += $(temp_files)
+
+#
+# convenience targets for generated source files
+#
+.PHONY: generated clean-generated
+clean-generated: clean
+	rm -f $(GENERATED) stamp-*
+generated: clean-generated $(GENERATED)
