do runtime detection of the CPU type and the CPU features. in particular,
Sat Apr 15 03:18:53 2006  Tim Janik  <timj@gtk.org>

        * birnetcpu.[hc]: do runtime detection of the CPU type and
        the CPU features. in particular, detect the available (SIMD)
        instruction sets at runtime. currently supports i368 and
        amd64 via CPUID.

        * birnetcore.h: provide wrapper macros for GCC attributes.

        * tests/infotest.cc: test the CPU info API.

svn path=/trunk/; revision=3603

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -11,6 +11,7 @@ GLIB_MKENUMS    = glib-mkenums
 birnet_headers = $(strip 		\
 	birnet.h			\
 	birnetcore.h			\
+	birnetcpu.h			\
 	birnetmsg.h			\
 	birnetring.h			\
 	birnetsignal.hh                 \
@@ -22,6 +23,7 @@ birnet_headers = $(strip 		\
 )
 birnet_sources = $(strip 		\
 	birnetcore.c			\
+	birnetcpu.c			\
 	birnetmsg.c			\
 	birnetring.c			\
 	birnetthread.c			\
