fixup distuninstallcheck:-rule which reports not uninstalled files created
Sun Apr 16 17:43:23 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am: fixup distuninstallcheck:-rule which reports
        not uninstalled files created by update-mime-database(1).

svn path=/trunk/; revision=3609

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,3 +37,8 @@ EXTRA_DIST += $(strip		\
 	intltool-merge.in       \
 	intltool-update.in	\
 )
+
+# fixup distuninstallcheck:-rule reporting files created by update-mime-database(1)
+filter_stale_uninstalled      = | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases)$$'
+distuninstallcheck_listfiles  = find . -type f -print 		# standard automake-1.9 setting
+distuninstallcheck_listfiles += $(filter_stale_uninstalled)	# amend by required filtering
