added specialized "distcheck" rule that disables a recursive make dist.
Wed Apr 19 02:30:34 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am: added specialized "distcheck" rule that disables a
        recursive make dist. the reason for which is explained here:
        http://blogs.gnome.org/view/timj/2006/04/18/0

        * docs/beast.1.doxi:
        * beast-gtk/bstmain.c: implemented --merge.

        * configure.in: provide AM conditional WITH_PERLRULE.

        * beast-gtk/icons/Makefile.am:
        * configure.in: removed STRIP_* cruft.

svn path=/trunk/; revision=3616

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -4,7 +4,7 @@
 ## GNU Lesser General Public License version 2 or any later version.
 include $(top_srcdir)/Makefile.decl
 
-SRC_IMAGES = @STRIP_BEGIN@	\
+SRC_IMAGES = $(strip		\
 	aguitar.xcf		\
 	browse-image.xcf	\
 	bus-add.xcf		\
@@ -47,9 +47,9 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	wave.xcf		\
 	wave-tool.xcf		\
 	small-audio.xcf		\
-@STRIP_END@
+)
 
-STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
+STOCK_IMAGE_DEFS = $(strip						\
 	STOCK_NOTE_ICON			$(srcdir)/binote.png		\
 	STOCK_BROWSE_IMAGE		$(srcdir)/browse-image.png	\
 	STOCK_BUS_ADD			$(srcdir)/bus-add.png		\
@@ -131,7 +131,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_WAVE			$(srcdir)/wave.png		\
 	STOCK_WAVE_TOOL			$(srcdir)/wave-tool.png		\
 	STOCK_ZOOM_ANY			$(srcdir)/zoom-any.png		\
-@STRIP_END@
+)
 
 gen_sources = xgen-bsgc xgen-bsgh
 CLEANFILES += $(gen_sources) bst-stock-gen.c bst-stock-gen.h
