--- a/configure.in
+++ b/configure.in
@@ -138,23 +138,6 @@ MC_IF_VAR_EQ(GXX, yes,,
     AC_MSG_ERROR(This package requires GNU g++)
 )
 
-# Figure build requirement
-AC_MSG_CHECKING(whether make is GNU Make)
-STRIP_BEGIN=
-STRIP_END=
-if $ac_make --version 2>/dev/null | grep '^GNU Make ' >/dev/null ; then
-        STRIP_BEGIN='$(strip $(STRIP_DUMMY)'
-        STRIP_END=')'
-        AC_MSG_RESULT(yes)
-else
-        AC_MSG_RESULT(no)
-fi
-dnl # some Make 3.79 $(strip ) versions are broken and require an empty arg
-STRIP_DUMMY=
-AC_SUBST(STRIP_DUMMY)
-AC_SUBST(STRIP_BEGIN)
-AC_SUBST(STRIP_END)
-
 # require pkg-config
 MC_ASSERT_PROG(PKG_CONFIG, pkg-config, [pkg-config can be found at http://www.freedesktop.org/software/pkgconfig/])
 
@@ -584,6 +567,7 @@ else
     PERLRULE="$SRCEQBUILDRULE"
 fi
 AC_SUBST(PERLRULE)
+AM_CONDITIONAL(WITH_PERLRULE, [test "$PERLRULE" = "#"])
 
 # Check sub-package requirements
 AC_BIRNET_REQUIREMENTS
