new SSE-only plugin which replaces the FPU block utils provided by BSE
Wed Apr 19 23:53:28 2006  Tim Janik  <timj@gtk.org>

        * plugins/bseblockutils.cc: new SSE-only plugin which replaces the FPU
        block utils provided by BSE with SSE variants.
        SSE variants are so far supplied for add() and scale() based on SSE
        code by Stefan Westerfeld.

svn path=/trunk/; revision=3618

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -75,6 +75,13 @@ else
 plugin_SSE_cond_libs	  =
 endif
 
+# === CoreHook plugin ===
+plugin_SSE_ltlibs            += bseblockutils.SSE.la
+bseblockutils_SSE_la_SOURCES  = bseblockutils.cc
+bseblockutils_SSE_la_LDFLAGS  = -module $(plugins_ldflags)
+bseblockutils_SSE_la_LIBADD   = $(plugins_libs)
+bseblockutils_SSE_la_CXXFLAGS = $(SSE_PLUGIN_CXXFLAGS)
+
 # === Makefile.plugins adds plugin rules ===
 include Makefile.plugins
 # === Makefile.plugins generation rules ===
