--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -12,7 +12,7 @@ DEFS += -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
 
 EXTRA_DIST += arrows.gp filter-defs.gp
 
-TESTS = testfft testcxx subnormals loophandle
+TESTS = blocktests testfft testcxx subnormals loophandle
 noinst_PROGRAMS = $(TESTS)
 progs_ldadd = $(top_builddir)/bse/libbse.la
 testfft_SOURCES = testfft.c cxxdummy.cc
@@ -24,4 +24,6 @@ subnormals_LDADD = $(progs_ldadd)
 subnormals_CXXFLAGS = # -ffast-math
 loophandle_SOURCES = loophandle.c
 loophandle_LDADD = $(progs_ldadd)
+blocktests_SOURCES = blocktests.cc
+blocktests_LDADD = $(progs_ldadd)
 
