--- a/configure.in
+++ b/configure.in
@@ -567,7 +567,7 @@ else
     PERLRULE="$SRCEQBUILDRULE"
 fi
 AC_SUBST(PERLRULE)
-AM_CONDITIONAL(WITH_PERLRULE, [test "$PERLRULE" = "#"])
+AM_CONDITIONAL(WITH_PERLRULE, [test "$PERLRULE" != "#"])
 
 # Check sub-package requirements
 AC_BIRNET_REQUIREMENTS
