avoid configuring USE_HTAGS which only doxygen 1.4.4 has.
Sat Apr 22 17:09:50 2006  Tim Janik  <timj@gtk.org>

        * qdoxygen.py: avoid configuring USE_HTAGS which only doxygen 1.4.4 has.

        * Makefile.am: fixed "clean" rule, has to be "clean-local".

svn path=/trunk/; revision=3634

--- a/doxer/Makefile.am
+++ b/doxer/Makefile.am
@@ -4,7 +4,7 @@
 ## GNU Lesser General Public License version 2 or any later version.
 include $(top_srcdir)/Makefile.decl
 
-clean:
+clean-local:
 	rm -f *.pyc
 
 EXTRA_DIST += $(strip		\
