--- a/bse/tests/.cvsignore
+++ b/bse/tests/.cvsignore
@@ -1,12 +1,10 @@
-*.lo
-*.o
+Makefile.in
+Makefile
 .deps
 .libs
-Makefile
-Makefile.in
-cutvorbis
-magictest
-mathtests
+*.o
+blocktests
+loophandle
+subnormals
 testcxx
-testsmart
 testfft
