rotate, announce LAD conference 2006 visit.
Mon Apr 24 20:11:45 2006  Tim Janik  <timj@gtk.org>

        * web/oldnews.doxi:
        * web/news.doxi: rotate, announce LAD conference 2006 visit.

        * web/Makefile.am (ACCOUNT): fix for timj to update the website from
        multiple accounts.

svn path=/trunk/; revision=3645

--- a/web/Makefile.am
+++ b/web/Makefile.am
@@ -297,7 +297,8 @@ clean-local:
 site: beastweb-pages.tar.bz2 beastweb-galleries.tar.bz2
 .PHONY: site site-preview site-update site-update-all site-update-galleries site-update-pages
 # remote installation
-ACCOUNT=${USER}@beast.gtk.org
+ACCOUNT_USER = $(subst tjlocal, timj, ${USER})
+ACCOUNT=$(strip $(ACCOUNT_USER))@beast.gtk.org
 ACDEST=/web/beast/
 ACTMP=xgen-tmp
 site-update-pages: beastweb-pages.tar.bz2
