--- a/beast-gtk/.cvsignore
+++ b/beast-gtk/.cvsignore
@@ -1,23 +1,15 @@
-*.lo
-.deps
-_libs
-.libs
-Makefile
 Makefile.in
-bstconfigpaths.h
+Makefile
+stamp-bstenum_arrays.c
 bstenum_arrays.c
 bstenum_list.c
+stamp-bstgenbseapi.h
+bstgenbseapi.c
+bstgenbseapi.h
+stamp-bstgentypes.h
 bstgentypes.c
 bstgentypes.h
 bstmarshal.c
 bstmarshal.h
-bststest
-bstrtest
-tsmview
-scankeys
-stamp-bstenum_arrays.c
-stamp-bstgenbseapi.h
-bstgenbseapi.c
-bstgenbseapi.h
-beast-0.*.*
 testgui
+tsmview
