--- a/.cvsignore
+++ b/.cvsignore
@@ -1,21 +1,16 @@
-Makefile
 Makefile.in
-aclocal.m4
-config.log
-stamp-h
-stamp-h.in
-libtool
-configure
-configure.h
+Makefile
 configure.h.in
-config.status
-config.cache
-intltool-extract
-intltool-extract.in
-intltool-merge
-intltool-merge.in
-intltool-update
-intltool-update.in
-intltool-modules
+configure.h
+configure
 autom4te.cache
-mkinstalldirs
+config.status
+config.log
+aclocal.m4
+intltool-extract.in
+intltool-extract
+intltool-merge
+intltool-update
+libtool
+stamp-h
+stamp-h1
