reset CFLAGS & LDFLAGS around AC_CHECK_LIB() to work around link errors
Sat Apr 29 16:55:18 2006  Tim Janik  <timj@gtk.org>

        * configure.in: reset CFLAGS & LDFLAGS around AC_CHECK_LIB() to work
        around link errors due to -lbse and missing dummy.cc (for older gcc
        versions).

svn path=/trunk/; revision=3650

--- a/drivers/bse-alsa/configure.in
+++ b/drivers/bse-alsa/configure.in
@@ -158,7 +158,13 @@ AC_DEFUN([AC_ASOUND_CHECK],
     dnl --- check for -lasound ---
     found_libasound=0
     dnl snd_asoundlib_version() was introduced in ALSA 1.0.5
+    cflags=$CFLAGS
+    ldflags=$LDFLAGS
+    CFLAGS=""
+    LDFLAGS=""
     AC_CHECK_LIB(asound, snd_asoundlib_version, ALSA_LIBS="-lasound"; found_libasound=1)
+    CFLAGS="$cflags"
+    LDFLAGS="$ldflags"
     if test $found_libasound = 0; then
 	AC_MSG_ERROR([ALSA version 1.0.5 is required to build this package])
     fi
