provide bugzilla links.
Tue May  2 19:23:23 2006  Tim Janik  <timj@gtk.org>

        * web/news.doxi:
        * web/contact.doxi: provide bugzilla links.

        * web/htaccess.in: support /bugs redirect.

svn path=/trunk/; revision=3652

--- a/web/htaccess.in
+++ b/web/htaccess.in
@@ -40,6 +40,7 @@ Redirect 302 /xmlns:xdef			http://beast.gtk.org/documentation
 Redirect 302 /screenshots.html			http://beast.gtk.org/screenshots
 Redirect 302 /mailinglist.html			http://beast.gtk.org/contact
 Redirect 302 /bugs.html				http://beast.gtk.org/contact
+Redirect 302 /bugs				http://beast.gtk.org/contact
 # in the above, the following list of entry points should be made sure to exist:
 # download.html, screenshots.html, mailinglist.html, bugs.html, faq.html, about.html
 
