added a link to http://beast.gtk.org/LICENSE-AS-IS to clarify the
Wed May  3 23:19:32 2006  Tim Janik  <timj@gtk.org>

        * library/effects/atan-canyon.bse:
        * library/instruments/bqs-organ.bse:
        * library/instruments/bqs-organ.bse:
        * library/instruments/bqs-syndrum.bse:
        * library/instruments/bqs-merp-pad.bse:
        * library/instruments/bqs-queek-synth.bse:
        * library/instruments/bqs-moog-saw-bass.bse:
        * library/instruments/bqs-fretless-bass.bse:
        added a link to http://beast.gtk.org/LICENSE-AS-IS to clarify
        the licensing information.

        * web/htaccess.in: redirect http://beast.gtk.org/LICENSE-AS-IS

svn path=/trunk/; revision=3654

--- a/web/htaccess.in
+++ b/web/htaccess.in
@@ -41,6 +41,7 @@ Redirect 302 /screenshots.html			http://beast.gtk.org/screenshots
 Redirect 302 /mailinglist.html			http://beast.gtk.org/contact
 Redirect 302 /bugs.html				http://beast.gtk.org/contact
 Redirect 302 /bugs				http://beast.gtk.org/contact
+Redirect 302 /LICENSE-AS-IS			http://beast.gtk.org/mirror/LICENSE-AS-IS
 # in the above, the following list of entry points should be made sure to exist:
 # download.html, screenshots.html, mailinglist.html, bugs.html, faq.html, about.html
 
