added bench test for the float-cancellation macros used by BSE.
Sun May  7 23:39:43 2006  Tim Janik  <timj@gtk.org>

        * tests/subnormals.cc: added bench test for the float-cancellation macros
        used by BSE.

        * tests/Makefile.am: compile subnormals.cc with -ffast-match because this
        affects the subnormal cancellation benchmarks and because this option is
        used when compiling plugins.

svn path=/trunk/; revision=3665

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -21,7 +21,7 @@ testcxx_SOURCES = testcxx.cc
 testcxx_LDADD = $(progs_ldadd)
 subnormals_SOURCES = subnormals.cc subnormals-aux.cc
 subnormals_LDADD = $(progs_ldadd)
-subnormals_CXXFLAGS = # -ffast-math
+subnormals_CXXFLAGS = -ffast-math
 loophandle_SOURCES = loophandle.c
 loophandle_LDADD = $(progs_ldadd)
 blocktests_SOURCES = blocktests.cc
