--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -20,6 +20,7 @@ icon_list += strings.c
 icon_list += sub.c
 icon_list += sum.c
 icon_list += adsr.png
+icon_list += ampctrl.png
 icon_list += ampmix.png
 icon_list += atan.png
 icon_list += balance.png
@@ -43,6 +44,7 @@ icon_list += strings.png
 icon_list += sub.png
 icon_list += sum.png
 icon_list += adsr.xcf
+icon_list += ampctrl.xcf
 icon_list += ampmix.xcf
 icon_list += atan.xcf
 icon_list += balance.xcf
